weird overlap issue with new article button messes with spacing but everything still works

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&display=swap');
+@import url('//dl.dropbox.com/s/vpi3f9s7nhpe7v7/honeybee.css');
 
 
 .App {
@@ -18,6 +19,15 @@
   padding-left: 20px;
   border-bottom: 1.5px solid;
   border-bottom-color: black;
+}
+
+.title h1 {
+  display: contents;
+}
+
+.title span {
+  font-size: 30px;
+  margin-left: 70%;
 }
 
 .article-component button {
@@ -64,7 +74,7 @@
 .dashboard-container {
   margin-left: 27%;
   width: 50%;
-  padding-top: 110px;
+  padding-top: 150px;
 }
 
 .articles-container {
@@ -90,11 +100,11 @@
 }
 
 .header-component {
-  width: 540px;
+  width: 740px;
   height: 125px;
   position: absolute;
-  left: 50%;
-  margin-left: -270px;
+  margin-left: 27%;
+  margin-top: 30px;
 }
 
 .header-component h1 {
@@ -122,6 +132,21 @@
 
 .general-button {
   margin-left: 10px;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 6px;
+  padding-right: 6px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  -webkit-box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1); 
+  box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
+}
+
+.logout-button {
+  margin-left: 70%;
   border-radius: 4px;
   margin-bottom: 10px;
   padding-top: 3px;
@@ -267,6 +292,11 @@
 
 .new-article-form-component form {
   padding-bottom: 30px;
+}
+
+.new-article-line {
+  width: 740px;
+  margin-bottom: 25px;
 }
 
 .article-component {
